--- a/public/styles/new-tweet.css
+++ b/public/styles/new-tweet.css
@@ -48,3 +48,15 @@
 .negative-remaining {
   color: red;
 }
+
+.error {
+  border: 1px solid;
+  margin: 10px 0px;
+  padding: 15px 10px 15px 50px;
+  background-repeat: no-repeat;
+  background-position: 10px center;
+  color: #D8000C;
+  background-color: #FFBABA;
+  background-image: url('https://i.imgur.com/GnyDvKN.png');
+
+}
