--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -3,6 +3,8 @@
  * https://css-tricks.com/international-box-sizing-awareness-day/
  * Do not modify these two selectors, please
  */
+
+
 html {
   box-sizing: border-box;
 }
@@ -27,8 +29,38 @@ body {
 
 main {
   display: flex;
-  width: 90%;
   align-items: center;
   flex-direction: column;
   background-color: #f4f1ec;
+  
+}
+
+main section {
+  max-width: 100%;
+}
+
+/* @media only screen and (min-width: 768px) {
+  .header {
+    margin: 50px;
+  }
+} */
+
+@media only screen and (min-width: 768px) {
+  body {
+    display: flex;
+    flex-wrap: wrap;
+  }
+
+  nav {
+    width: 100vw;
+  }
+
+  .header {
+    width: 30%;
+    margin: 50px;
+  }
+
+  .container {
+    width: 50%;
+  }
 }
