--- a/public/styles/header.css
+++ b/public/styles/header.css
@@ -1,13 +1,11 @@
 .header {
-  min-width: 100vh;
-  height: 520px;
+  height: 420px;
+  padding: 20px;
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding-top: 120px;
   background-color: #c1c3e0;
   background-image: url("https://www.transparenttextures.com/patterns/asfalt-light.png");
-
 }
 
 .header-name {
