--- a/public/styles/new-tweet.css
+++ b/public/styles/new-tweet.css
@@ -18,7 +18,7 @@
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  margin: 1em;
+  margin: 1em 0 1em 0;
   font-family: 'Bungee', cursive;
 }
 
